# RepositorySalvati

./: .gitignore  README.md
Esercizi061025/docker_test/: main.py
Esercizi061025/flow/guide_creator_flow/: .dockerignore  Dockerfile
Esercizi061025/my_app/: app.py
Esercizi110925/: script_2.py  script_3.py  script_4.py
Esercizi120925/: es1.py  es2.py  es3.py
Esercizi150925/: prova_azure.py
Esercizi150925/ProgettoStreamlit/: app.py  chat.py  login.py
Esercizi160925/ProgettoRAG/: prova_embed.py  prova_rag.py  rag_faiss_azure_local.py  rag_faiss_azure_web.py  rag_faiss_azure_web_user.py  rag_faiss_lmstudio.py  ragas_local_results.csv  ragas_results.csv
Esercizi160925/ProgettoRAG/Documents/: francia.txt
Esercizi170925/Project/: main.py
Esercizi170925/Project/test/: test_utils.py
Esercizi170925/Project/utils/: calcoli.py
Esercizi180925/: prova_spacy.py
Esercizi190925/Project/: domande data.txt  domande model.txt  questions.txt  rag_faiss_azure_md.py  ragas_results.csv
Esercizi190925/Project/Documents/: rag_markdown.txt
Esercizi190925/Project/Results/: model_documentation.md
Esercizi230925/guide_creator_flow/: poem.txt
Esercizi240925/Esercizio2/guide_creator_flow/: crewai_flow.html  pyproject.toml  ragas_results.csv  report.md
Esercizi240925/Esercizio2/guide_creator_flow/utilis/: models.py
Esercizi250925/: app_functions.py  cursor_test.py  prova_iris.py
Esercizi250925/docs/source/: conf.py  (+1 more)
Esercizi260925/Esercizio1/: db_vet.py  document.py  models.py  rag_quadrant_hybrid.py  ragas_prova.py  vectore_store.py
Esercizio110925/: script.py
(+15 files in other folders)
